--- a/index.html
+++ b/index.html
@@ -4,24 +4,39 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">  
+  <meta name="theme-color" content="#000000"> 
+   <link rel="stylesheet" type="text/css" href="style.css" /> 
 </head>
 
 <body>
-  <h1>Waffle Camp</h1>
+  <h1>修学旅行</h1>
   <div class="div1">
-    <h2>世界の女性の名言</h2>
-    <p>"Am I good enough? Yes I am,"</p>
-    <p>by Michelle Obama</p>
+    <h2>姫路城</h2>
+    <ul>
+        <li>場所：兵庫県姫路市本町</li>
+        <li>建築：1346年(室町時代)</li>
+        <li>指定文化財：国宝・重要文化財・特別史跡・ユネスコ世界文化遺産</li>
+    </ul>
+      <p>築城の最初は1346年の赤松貞範によるもので、後に応仁の乱を経て羽柴秀吉が対毛利勢の拠点として修築した。</p>
+      <p>しかし、1600年の関ヶ原の戦いの後池田輝政が入城したのが現在の姫路城の始まりである。</p>
+      <p>姫路城は別名白鷺城と呼ばれており、2009年から始まった大規模な修理の影響で城の外壁が白くなっている。</p>
+    
   </div>
   <div class="div2">  
-    <h2>Who is Michelle?</h2>
-      <p>ミッシェル・オバマはオバマ前大統領のファーストレディ。</p>
-      <p>ハーバード大学のロースクールを卒業し、弁護士となった。</p>
-      <p>その後夫のバラクが大統領となり、ファーストレディに。</p>
-      <p>現在は女性や黒人のエンパワメントに力をいれて活動を行っている。</p>
+    <h2>厳島神社</h2>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
       <img src="https://i.ibb.co/NYdf8kk/1478944964-michelle-obama.jpg" alt="ステージ上でマイクの前に立つミシェル・オバマ">
-  </div> 
+
+    </div> 
+    <div class="div3">
+        <h2>原爆ドーム・原爆資料館</h2>
+        <p>（好きな言葉）</p>
+    </div>  
+
+    
 </body>
 
 </html>
