--- a/index.html
+++ b/index.html
@@ -12,15 +12,29 @@
   <h1>修学旅行</h1>
   <div class="div1">
     <h2>姫路城</h2>
+    <img src="http://blog-imgs-82.fc2.com/s/a/k/sakura2002saku/201509062212201c8.jpg">
+   <p>〖概要〗</p>
     <ul>
         <li>場所：兵庫県姫路市本町</li>
-        <li>建築：1346年(室町時代)</li>
+        <li>建築：1346年(南北朝時代)</li>
         <li>指定文化財：国宝・重要文化財・特別史跡・ユネスコ世界文化遺産</li>
     </ul>
-      <p>築城の最初は1346年の赤松貞範によるもので、後に応仁の乱を経て羽柴秀吉が対毛利勢の拠点として修築した。</p>
-      <p>しかし、1600年の関ヶ原の戦いの後池田輝政が入城したのが現在の姫路城の始まりである。</p>
-      <p>姫路城は別名白鷺城と呼ばれており、2009年から始まった大規模な修理の影響で城の外壁が白くなっている。</p>
-    
+    〖歴史〗
+   <p>現在、姫路城が建っている場所に最初に城が築かれたのは1346年のことである。最初の築城は赤松貞範によるものだった。それは、敵の攻撃からの
+          短期間の防衛だけを目的とした簡易的な城だった。今残っている姫路城は、姫山と鷺山の二つの丘にまたがって築かれているが、
+          かつての城ははるかに小さく姫山だけを縄張りにしていたので、姫山城と呼ばれていた。その後応仁の乱の後に羽柴秀吉が中国地方攻めの拠点として
+          大改修を行った。秀吉没後、西軍が関ヶ原の戦いで敗れると、天下統一をはたした德川家康は、大坂と中国地方の要の位置にあたる姫路城を池田輝政
+          に入城させ、輝政は、更に大規模な改修を行った。明治以降、ほとんどの城が取り壊されたが、姫路城は奇跡的に無傷のまま残っている。</p>
+    <p>〖世界遺産登録〗</p>
+      <ol>
+        <li>評価された理由:
+        　<ul>
+            <li>その美的完成度が我が国の木造建築の最高の位置にあり、世界的にも他に類のない優れたものであること。</li>
+            <li>17世紀初頭の城郭建築の最盛期に、天守群を中心に、櫓、門、土塀等の建築物や石垣、堀などの土木建築物が良好に保存され、
+                防御に工夫した日本独自の城郭の構造を最もよく示した城であること</li>
+        </ul>
+    </li>  
+      </ol>
   </div>
   <div class="div2">  
     <h2>厳島神社</h2>
@@ -28,12 +42,12 @@
       <p></p>
       <p></p>
       <p></p>
-      <img src="https://i.ibb.co/NYdf8kk/1478944964-michelle-obama.jpg" alt="ステージ上でマイクの前に立つミシェル・オバマ">
+      <img src=>
 
     </div> 
     <div class="div3">
         <h2>原爆ドーム・原爆資料館</h2>
-        <p>（好きな言葉）</p>
+        <p></p>
     </div>  
 
     
