--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>修学旅行</h1>
+  <h1>修学旅行ノート</h1>
   <div class="div1">
     <h2>姫路城</h2>
     <img src="http://blog-imgs-82.fc2.com/s/a/k/sakura2002saku/201509062212201c8.jpg">
@@ -19,29 +19,69 @@
         <li>建築：1346年(南北朝時代)</li>
         <li>指定文化財：国宝・重要文化財・特別史跡・ユネスコ世界文化遺産</li>
     </ul>
-    〖歴史〗
-   <p>現在、姫路城が建っている場所に最初に城が築かれたのは1346年のことである。最初の築城は赤松貞範によるものだった。それは、敵の攻撃からの
+   <p>〖歴史〗</p> 
+         現在、姫路城が建っている場所に最初に城が築かれたのは1346年のことである。最初の築城は赤松貞範によるものだった。それは、敵の攻撃からの
           短期間の防衛だけを目的とした簡易的な城だった。今残っている姫路城は、姫山と鷺山の二つの丘にまたがって築かれているが、
           かつての城ははるかに小さく姫山だけを縄張りにしていたので、姫山城と呼ばれていた。その後応仁の乱の後に羽柴秀吉が中国地方攻めの拠点として
           大改修を行った。秀吉没後、西軍が関ヶ原の戦いで敗れると、天下統一をはたした德川家康は、大坂と中国地方の要の位置にあたる姫路城を池田輝政
-          に入城させ、輝政は、更に大規模な改修を行った。明治以降、ほとんどの城が取り壊されたが、姫路城は奇跡的に無傷のまま残っている。</p>
+          に入城させ、輝政は、更に大規模な改修を行った。明治以降、ほとんどの城が取り壊されたが、姫路城は奇跡的に無傷のまま残っている。
     <p>〖世界遺産登録〗</p>
       <ol>
         <li>評価された理由:
         　<ul>
             <li>その美的完成度が我が国の木造建築の最高の位置にあり、世界的にも他に類のない優れたものであること。</li>
             <li>17世紀初頭の城郭建築の最盛期に、天守群を中心に、櫓、門、土塀等の建築物や石垣、堀などの土木建築物が良好に保存され、
-                防御に工夫した日本独自の城郭の構造を最もよく示した城であること</li>
+                防御に工夫した日本独自の城郭の構造を最もよく示した城であること　（姫路城公式サイトより引用）</li>     
         </ul>
-    </li>  
+        </li>    
+        <li>登録内容
+          <ul>
+            <li>登録物件：姫路城</li>
+            <li>記載年月日：平成5年12月11日</li>
+          </ul>
+        </li>
       </ol>
-  </div>
+    <P>〖平成の大修理〗</P>
+      <ol>
+        <li>経緯 
+    1993年、日本で初めての世界遺産に登録されたのを機に、より計画的な保存管理体制が求められ、城内の指定文化財について
+   「平成中期保存修理計画」を策定した。この計画、では大天守については別扱いとし、昭和の大修理から概ね50年が経過した時点で修理を検討する
+   ものとした。</li>
+      </ol>
+
+    </div>
   <div class="div2">  
     <h2>厳島神社</h2>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+     <img src="https://d1f5hsy4d47upe.cloudfront.net/a8/a83d9b0cb9116cc15a8fd375271ebd7e_t.jpeg">
+
+    <p>〖概要〗</p>
+      <ul>
+       <li>場所：広島県廿日市市宮島町</li>
+       <li>建築：推古元年(593年)</li>
+       <li>指定文化財：国宝・重要文化財・ユネスコ世界文化遺産・国重要文化財
+      </ul>
+    <p>〖歴史〗</p>
+  厳島神社の御祭神は天照大神と素戔嗚尊が高天原だ御誓をされたときに御出現になった神々で、皇室の安泰、国家鎮護、
+  また海上の守護神として古くから崇信受けられた。厳島神社が現在のような華麗な社殿と回廊の配置を整備したのは、平安時代末期の平清盛で、
+  清盛は深く信仰した。1146年、安芸の国の国司となった清盛は、本社を中心に、社殿や回廊を配置し、現世に竜宮城を再現しようとしたと伝えられている。
+  1185年、平氏は壇ノ浦の戦いで滅亡したが、その後も保護を受けて発展してきた。大陸との貿易拠点としての役割も担い、宮島は経済の中心となった。
+    <p>〖世界遺産登録〗</p>
+      <ol>
+        <li>評価された理由:
+        　<ul>
+            <li>海上に建ち並ぶ建造物群と背後の自然とが一体となった景観は、人類の創造的才能を表す傑作であること。</li>
+            <li>建造物の多くは13世紀に火災に見舞われたが、創建時の様式に忠実に再建され、平安時代、鎌倉時代の建築様式を今に伝えていること。</li>     
+        </ul>
+        </li>    
+        <li>登録内容:
+          <ul>
+            <li>登録物件：厳島神社・厳島神社前面の海及び背後の弥山原始林を含む区域</li>
+            <li>登録年月日：平成8年12月8日</li>
+          </ul>
+        </li>  
+        </li>
+    　</ol>
+    <p></p>
       <img src=>
 
     </div> 
